--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^6.4.1",
     "axios": "^0.21.4",
     "element-plus": "^1.1.0-beta.12",
     "js-cookie": "^3.0.1",
