--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons": "^0.0.11",
     "@vueuse/core": "^6.4.1",
     "axios": "^0.21.4",
     "element-plus": "^1.1.0-beta.12",
