登录已经完成

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.4",
     "element-plus": "^1.1.0-beta.12",
     "js-cookie": "^3.0.1",
+    "jsencrypt": "^3.2.1",
     "vue": "^3.2.6",
     "vue-router": "^4.0.11",
     "vuex": "^4.0.2"
