添加动态标题设置

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ruoyi-cloud-vue3",
   "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
