--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@element-plus/icons": "^0.0.11",
     "@vueuse/core": "^6.4.1",
     "axios": "^0.21.4",
+    "echarts": "^5.2.1",
     "element-plus": "^1.1.0-beta.20",
     "fuse.js": "^6.4.6",
     "js-cookie": "^3.0.1",
