--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-vue": "^7.18.0",
     "sass": "^1.41.1",
     "vite": "^2.5.4",
+    "vite-plugin-compression": "^0.3.5",
     "vite-plugin-element-plus": "^0.0.12",
     "vite-plugin-svg-icons": "^1.0.4"
   }
