--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "docs:dev": "vitepress dev docs --host",
+    "docs:build": "vitepress build docs",
+    "docs:serve": "vitepress serve docs"
   },
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
@@ -30,6 +33,7 @@
     "vite": "^2.5.4",
     "vite-plugin-compression": "^0.3.5",
     "vite-plugin-element-plus": "^0.0.12",
-    "vite-plugin-svg-icons": "^1.0.4"
+    "vite-plugin-svg-icons": "^1.0.4",
+    "vitepress": "^0.20.0"
   }
 }
