--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "sass": "1.32.6",
     "unplugin-vue2-script-setup": "^0.8.1",
     "vite": "^2.6.14",
-    "vite-plugin-svg-icons": "^1.0.5",
     "vite-plugin-vue2": "^1.9.0",
     "vue-template-compiler": "^2.6.14"
   },
@@ -35,5 +34,10 @@
     "vue-cropper": "^0.5.8",
     "vue-router": "^3.5.3",
     "vuex": "^3.6.2"
-  }
+  },
+  "browserslist": [
+    "last 1 version",
+    "> 1%",
+    "IE 10"
+  ]
 }
