--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ruoyi-cloud-vue3",
-  "version": "1.0.2",
+  "version": "2.0.2",
   "license": "MIT",
   "scripts": {
     "dev": "vite --host",
@@ -11,30 +11,54 @@
     "docs:serve": "vitepress serve docs"
   },
   "dependencies": {
-    "@element-plus/icons": "^0.0.11",
-    "@vueuse/core": "^6.4.1",
-    "axios": "^0.21.4",
-    "echarts": "^5.2.1",
-    "element-plus": "^1.1.0-beta.20",
-    "fuse.js": "^6.4.6",
+    "@element-plus/icons-vue": "^0.2.7",
+    "@vueuse/core": "^7.6.2",
+    "axios": "^0.26.0",
+    "echarts": "^5.3.0",
+    "element-plus": "^2.0.2",
+    "fuse.js": "^6.5.3",
     "js-cookie": "^3.0.1",
     "jsencrypt": "^3.2.1",
     "nprogress": "^0.2.0",
-    "vue": "^3.2.20",
+    "vue": "^3.2.31",
     "vue-cropper": "^1.0.2",
-    "vue-router": "^4.0.11",
+    "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.6.1",
-    "@vue/compiler-sfc": "^3.2.6",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^7.18.0",
-    "sass": "^1.41.1",
-    "vite": "^2.5.4",
-    "vite-plugin-compression": "^0.3.5",
-    "vite-plugin-element-plus": "^0.0.12",
-    "vite-plugin-svg-icons": "^1.0.4",
-    "vitepress": "^0.20.0"
+    "@vitejs/plugin-vue": "^2.2.2",
+    "@vue/compiler-sfc": "^3.2.31",
+    "eslint": "^8.9.0",
+    "eslint-plugin-vue": "^8.5.0",
+    "fast-glob": "^3.2.11",
+    "sass": "^1.49.8",
+    "unplugin-auto-import": "^0.6.1",
+    "unplugin-vue-components": "^0.17.20",
+    "vite": "^2.8.4",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-optimize-persist": "^0.1.2",
+    "vite-plugin-package-config": "^0.1.1",
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vitepress": "^0.22.3"
+  },
+  "vite": {
+    "optimizeDeps": {
+      "include": [
+        "@element-plus/icons-vue",
+        "@vueuse/core",
+        "axios",
+        "echarts",
+        "element-plus",
+        "element-plus/es/locale/lang/zh-cn",
+        "fuse.js",
+        "js-cookie",
+        "jsencrypt/bin/jsencrypt.min",
+        "nprogress",
+        "vue",
+        "vue-cropper",
+        "vue-router",
+        "vuex"
+      ]
+    }
   }
 }
