--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "RuoYi-Cloud-Vue3",
-  "version": "1.0.0",
+  "name": "ruoyi-v2-composition",
+  "version": "2.0.0",
   "main": "index.js",
   "repository": "https://github.com/cll123456/rouyi-cloud-vue3.git",
   "author": "cll123456 <2642137848@qq.com>",
@@ -11,22 +11,22 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@vitejs/plugin-legacy": "^1.6.3",
-    "eslint": "^8.4.0",
-    "eslint-plugin-vue": "^8.1.1",
-    "sass": "1.32.6",
-    "unplugin-vue2-script-setup": "^0.8.1",
-    "vite": "^2.6.14",
-    "vite-plugin-vue2": "^1.9.0",
+    "@vitejs/plugin-legacy": "^1.7.1",
+    "eslint": "^8.9.0",
+    "eslint-plugin-vue": "^8.5.0",
+    "sass": "1.49.9",
+    "unplugin-vue2-script-setup": "^0.10.0",
+    "vite": "^2.8.4",
+    "vite-plugin-vue2": "^1.9.3",
     "vue-template-compiler": "^2.6.14"
   },
   "dependencies": {
-    "@vue/composition-api": "^1.4.1",
-    "@vueuse/core": "^7.1.2",
-    "axios": "^0.24.0",
-    "echarts": "^5.2.2",
+    "@vue/composition-api": "^1.4.7",
+    "@vueuse/core": "^7.6.2",
+    "axios": "^0.26.0",
+    "echarts": "^5.3.0",
     "element-ui": "^2.15.6",
-    "fuse.js": "^6.4.6",
+    "fuse.js": "^6.5.3",
     "js-cookie": "^3.0.1",
     "jsencrypt": "^3.2.1",
     "nprogress": "^0.2.0",
