--- a/package.json
+++ b/package.json
@@ -11,54 +11,42 @@
     "docs:serve": "vitepress serve docs"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^0.2.7",
-    "@vueuse/core": "^7.6.2",
-    "axios": "^0.26.0",
-    "echarts": "^5.3.0",
-    "element-plus": "^2.0.2",
-    "fuse.js": "^6.5.3",
+    "@element-plus/icons-vue": "^2.0.6",
+    "@vueuse/core": "^8.9.3",
+    "axios": "^0.27.2",
+    "echarts": "^5.3.3",
+    "element-plus": "^2.2.9",
+    "fuse.js": "^6.6.2",
     "js-cookie": "^3.0.1",
     "jsencrypt": "^3.2.1",
     "nprogress": "^0.2.0",
-    "vue": "^3.2.31",
-    "vue-cropper": "^1.0.2",
-    "vue-router": "^4.0.12",
+    "vue": "^3.2.37",
+    "vue-cropper": "^0.5.8",
+    "vue-router": "^4.1.2",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.2.2",
-    "@vue/compiler-sfc": "^3.2.31",
-    "eslint": "^8.9.0",
-    "eslint-plugin-vue": "^8.5.0",
+    "@vitejs/plugin-vue": "^3.0.0",
+    "@vue/compiler-sfc": "^3.2.37",
+    "eslint": "^8.19.0",
+    "eslint-plugin-vue": "^9.2.0",
     "fast-glob": "^3.2.11",
-    "sass": "^1.49.8",
-    "unplugin-auto-import": "^0.6.1",
-    "unplugin-vue-components": "^0.17.20",
-    "vite": "^2.8.4",
+    "sass": "^1.53.0",
+    "unplugin-auto-import": "^0.9.3",
+    "unplugin-vue-components": "^0.21.1",
+    "vite": "^3.0.0",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-optimize-persist": "^0.1.2",
-    "vite-plugin-package-config": "^0.1.1",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vitepress": "^0.22.3"
+    "vitepress": "1.0.0-alpha.4"
   },
-  "vite": {
-    "optimizeDeps": {
-      "include": [
-        "@element-plus/icons-vue",
-        "@vueuse/core",
-        "axios",
-        "echarts",
-        "element-plus",
-        "element-plus/es/locale/lang/zh-cn",
-        "fuse.js",
-        "js-cookie",
-        "jsencrypt/bin/jsencrypt.min",
-        "nprogress",
-        "vue",
-        "vue-cropper",
-        "vue-router",
-        "vuex"
-      ]
-    }
-  }
+  "pnpm": { 
+   "peerDependencyRules": { 
+     "ignoreMissing": [ 
+       "@algolia/client-search", 
+       "react", 
+       "react-dom", 
+       "@types/react" 
+     ] 
+   } 
+ } 
 }
